--- a/static/css/style.css
+++ b/static/css/style.css
@@ -197,7 +197,7 @@ body {
   text-align: center;
 }
 .section-n{
- 
+   
   text-align: center;
   color: var(--radical-red);
   font-size: var(--fs-1);
@@ -213,12 +213,12 @@ body {
   background-color: var(--kappel);
   color: var(--white);
   font-family: var(--ff-league_spartan);
-  font-size: var(--fs-4);
+  font-size: var(--fs-5);
   display: flex;
   align-items: center;
-  gap: 7px;
+  gap: 2px;
   max-width: max-content;
-  padding: 10px 20px;
+  margin-bottom: 5px;
   border-radius: var(--radius-5);
   overflow: hidden;
 }
@@ -281,10 +281,7 @@ body {
 .category-card,
 .stats-card { background-color: hsla(var(--color), 0.1); }
 
-:is(.course, .blog) .section-title { margin-block-end: 40px; }
-
-
-
+:is(.course, .news) .section-title { margin-block-end: 40px; }
 
 
 /*-----------------------------------*\
@@ -299,9 +296,9 @@ body {
   left: 0;
   width: 100%;
   background-color: var(--white);
-  padding-block: 12px;
+  padding-block: 10px;
   box-shadow: var(--shadow-1);
-  z-index: 4;
+  z-index: 1000;
 }
 
 .header.active { position: fixed; }
@@ -345,7 +342,7 @@ body {
   background-color: var(--white);
   width: 100%;
   max-width: 320px;
-  height: 100%;
+  height: 50%;
   z-index: 2;
   transition: 0.25s var(--cubic-in);
 }
@@ -507,7 +504,7 @@ body {
 
 .about-shape-2 {
   display: block;
-  bottom: -100px;
+  bottom: 100px;
   left: -60px;
   animation: bounce 2.5s infinite;
 }
@@ -561,40 +558,37 @@ body {
   justify-content:space-between ;
   align-items: flex-start;
   flex-direction: column;
+ 
+  border-radius: 2em;
 
 }
 .txt p{
  color: #1a1818;
- font-size: 1.5em;
+ font-size: 1.8em;
+ margin-top: 2px;
 }
 .txt h1{
   margin: 0;
+  color: black;
+  
 }
 .skewed{
   width: 80em;
   color:var(--black_80);
   display: flex;
-  background-color: rgb(245, 244, 227);
+  background-color: #f5f4e3;
   margin: 2em 0;
- 
 
 }
 .imgback{
   width: 25%;
- 
+border-radius: 2em;
   position: relative;
   overflow: hidden;
   
   
 }
-.imgback::before{
-  content: '';
-  position: absolute;
-  left: -6.1em;
-  top: 50%;
-  transform: translateY(-50%) rotate(20deg);
 
-}
 @media screen  and (max-width : 1050px)
 {
   .skewed{
@@ -609,7 +603,7 @@ body {
   
 
 .service-section{
-  margin-top: 180px;
+margin-top: 180px;
 min-height: 740px;
 width: 100%;
 
@@ -633,23 +627,21 @@ grid-template-columns: repeat(3,1fr);
 gap: 25px;
 z-index: 1;
 margin-top: 20px;
-overflow: hidden;
-
 
 }
+
 .cards .card{
 
-
-min-height: 300px;
-width: 400px;
+min-height: 250px;
+width: 330px;
 display: flex;
 justify-content: flex-start;
 flex-direction: column;
 padding: 0 8%;
-background:rgb(230, 233, 218);
+background:#f5f4e3;
 position: relative;
 border-radius: 15px;
-margin: 0 10px;
+margin: 0 30px;
 margin-bottom: 40px;
 }
 
@@ -661,8 +653,7 @@ width: 100%;
 top: 0;
 left: 0;
 border-radius: 15px;
-background:var(--radical-red);
-
+background:#1681A2;
 transform: rotate(0deg);
 z-index: -1;
 
@@ -670,8 +661,8 @@ z-index: -1;
 .cards .card:hover.card::before{
 transform: rotate(10deg);
 
-
 }
+
 .cards .card i{
 
 color: rgb(241, 215, 241);
@@ -684,22 +675,34 @@ padding: 15px;
 transition: 0.5s;
 }
 .cards .card h3{
-font-size: 1.8rem;
+font-size: 2rem;
 color:rgb(253, 135, 0);
 margin-bottom: 10px;
 margin-top: 40px;
+font-weight:800;
 
 }
-.cards .card 
-.cards .card .content p{
+.cards .card ,
+.cards .card .content {
 margin-top: 20px;
-
-color:rgb(20, 20, 19);
-font-size: 1.05rem;
+color:rgb(11, 11, 8);
+font-size: 2.5rem;
 margin-bottom: 30px;
 font-weight: 500;
 
 }
+.cards .card .content p {
+  height: 100%;
+  overflow-y: auto;}
+
+  .cards .card .content p {
+    margin-top: 20px;
+    color: rgb(11, 11, 8);
+    font-size: 2.5rem;
+    margin-bottom: 30px;
+    font-weight: 500;
+    max-height: 140px; 
+  }
 @media(max-width:1100px){
 .service-section h2{
     margin-top: 30px;
@@ -709,13 +712,8 @@ font-weight: 500;
 }
 
 }
-@media(max-width:900px){
-.cards .card{
-height: 250px;
-width: 330px;
-margin: 20px 0;
-}
-}
+
+
 
 
 
@@ -773,25 +771,25 @@ color: var(--color);
 
 
 /*-----------------------------------*\
-  #BLOG
+  #news
 \*-----------------------------------*/
 
-.blog-card .card-banner { border-radius: var(--radius-10); }
+.news-card .card-banner { border-radius: var(--radius-10); }
 
-.blog-card .card-banner .img-cover { transition: var(--transition-2); }
+.news-card .card-banner .img-cover { transition: var(--transition-2); }
 
-.blog-card .card-banner::after {
+.news-card .card-banner::after {
   inset: 0;
   background-color: var(--black_50);
   opacity: 0;
   transition: var(--transition-1);
 }
 
-.blog-card:is(:hover, :focus-within) .card-banner .img-cover { transform: scale(1.1); }
+.news-card:is(:hover, :focus-within) .card-banner .img-cover { transform: scale(1.1); }
 
-.blog-card:is(:hover, :focus-within) .card-banner::after { opacity: 1; }
+.news-card:is(:hover, :focus-within) .card-banner::after { opacity: 1; }
 
-.blog-card .card-content {
+.news-card .card-content {
   position: relative;
   margin-inline: 15px;
   background-color: var(--white);
@@ -799,10 +797,10 @@ color: var(--color);
   border-radius: var(--radius-10);
   box-shadow: var(--shadow-3);
   margin-block-start: -100px;
-  z-index:1;
+  z-index: 1;
 }
 
-.blog-card .card-btn {
+.news-card .card-btn {
   position: absolute;
   top: -40px;
   right: 30px;
@@ -815,41 +813,41 @@ color: var(--color);
   opacity: 0;
 }
 
-.blog-card .card-btn:is(:hover, :focus) { background-color: var(--radical-red); }
+.news-card .card-btn:is(:hover, :focus) { background-color: var(--radical-red); }
 
-.blog-card:is(:hover, :focus-within) .card-btn {
+.news-card:is(:hover, :focus-within) .card-btn {
   opacity: 1;
   transform: translateY(10px);
 }
 
-.blog-card :is(.card-meta-item, .card-text, .card-subtitle) {
+.news-card :is(.card-meta-item, .card-text, .card-subtitle) {
   font-size: var(--fs-5);
 }
 
-.blog-card .card-subtitle { text-transform: uppercase; }
+.news-card .card-subtitle { text-transform: uppercase; }
 
-.blog-card .card-title {
+.news-card .card-title {
   margin-block: 10px 15px;
   transition: var(--transition-1);
 }
 
-.blog-card .card-title:is(:hover, :focus) { color: var(--kappel); }
+.news-card .card-title:is(:hover, :focus) { color: var(--kappel); }
 
-.blog-card :is(.card-meta-list, .card-meta-item) { display: flex; }
+.news-card :is(.card-meta-list, .card-meta-item) { display: flex; }
 
-.blog-card .card-meta-list {
+.news-card .card-meta-list {
   flex-wrap: wrap;
   gap: 10px 20px;
   margin-block-end: 20px;
 }
 
-.blog-card .card-meta-item {
+.news-card .card-meta-item {
   gap: 10px;
   align-items: center;
   color: var(--eerie-black-1);
 }
 
-.blog-card .card-meta-item ion-icon {
+.news-card .card-meta-item ion-icon {
   color: var(--kappel);
   font-size: 18px;
   --ionicon-stroke-width: 40px;
@@ -875,7 +873,12 @@ color: var(--color);
   gap: 30px;
 }
 
-.footer-brand-text { margin-block: 20px; }
+.footer-brand-text { margin-block: 20px; 
+font-stretch: extra-condensed;
+font-size: large;
+padding-bottom: 10px;
+margin-top: 0px;
+}
 
 .footer-brand .wrapper {
   display: flex;
@@ -917,7 +920,8 @@ color: var(--color);
   gap: 25px;
 }
 
-.social-link { font-size: 20px; }
+.social-link { font-size: 20px;
+margin-top: 10px; }
 
 .footer-bottom {
   border-block-start: 1px solid var(--eerie-black-1);
@@ -986,38 +990,20 @@ color: var(--color);
 
   .grid-list { grid-template-columns: 1fr 1fr; }
 
-  :is(.course, .blog) .grid-list { grid-template-columns: 1fr; }
+  :is(.course, .news) .grid-list { grid-template-columns: 1fr; }
 
 
  /**
    * courses
    */
-  
-
-  
-
 
   /**
-   * HEADER 
-  .header{
-    flex-direction: column;
-    align-items: center;
-    background-size: cover;
-   padding-block: 20px;
-   z-index: initial;
-  }
-  .header .btn {
-    display: flex;
-    padding: 10px 30px;
-    margin-inline: 20px;
-  }
-
-
-
+   * HEADER
    */
 
   .header .container { max-width: unset; }
 
+  .header-actions { gap: 30px; }
 
 
 
@@ -1037,13 +1023,7 @@ color: var(--color);
 
 
 
-  /**
-   * STATS
-   */
-
-  .stats-card { padding: 40px 30px; }
-
-
+ 
 
   /**
    * FOOTER
@@ -1099,7 +1079,7 @@ color: var(--color);
 
   .btn { padding: 15px 30px; }
 
-  :is(.course, .blog) .grid-list { grid-template-columns: 1fr 1fr; }
+  :is(.course, .news) .grid-list { grid-template-columns: 1fr 1fr; }
 
 
 
@@ -1109,13 +1089,7 @@ color: var(--color);
 
   .header .container { padding-inline: 30px; 
   }
-  .header{
-    flex-direction: column;
-    align-items: center;
-    background-size: cover;
-   padding-block: 20px;
-   z-index: initial;
-  }
+
   .header .btn {
     display: flex;
     padding: 10px 30px;
@@ -1224,7 +1198,7 @@ color: var(--color);
 
   .grid-list { grid-template-columns: repeat(4, 1fr); }
 
-  :is(.course, .blog) .grid-list { grid-template-columns: repeat(3, 1fr); }
+  :is(.course, .news) .grid-list { grid-template-columns: repeat(3, 1fr); }
 
 
 
@@ -1318,7 +1292,7 @@ color: var(--color);
 
   .about-content,
   .video-card,
-  .blog { position: relative; }
+  .news { position: relative; }
 
 
 
@@ -1419,10 +1393,10 @@ color: var(--color);
 
 
   /**
-   * BLOG
+   * news
    */
 
-  .blog-shape {
+  .news-shape {
     top: 0;
     left: 0;
   }
