--- a/templates/courses.html
+++ b/templates/courses.html
@@ -1,6 +1,5 @@
  {% extends 'base.html' %}
 
-
  {% block body %}
  {% for course_data in data %}
  {% for section_data in course_data.sections %}
@@ -25,7 +24,10 @@
         <div class="content">
           <h3>{{ level.levelTitle }}</h3>
           <p> {{level.levelDescription}}</p>
-          <a href="#"> المزيد</a>
+          <a href="#" class="btn has-before">
+            <span class="span">Discover more</span>
+    <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+          </a>
         </div>
       </div>
  
